[package]
name = "arraxis"
version = "0.1.0"
edition = "2021"
authors = ["migearu <miguelenzoaruelo@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://migearu.github.io/"
description = "Distortion plugin, made it because I was bored."

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
atomic_float = "0.1.0"
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }
realfft = "3.3.0"
vizia = "0.1.0"
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["assert_process_allocs"] }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
